fix outline spacing difference with border

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1162,7 +1162,7 @@ legend {
     padding: .5em;
     padding-top: 1.75em;
     margin: -.5em;
-    margin-top: -1.75em;
+    margin-top: -1.6em;
     background: none;
     border: none;
     display: block;
